# gnome-desktop

./: .cvsignore  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  BUGS  CONTRIBUTING.md  ChangeLog  ChangeLog-20020212  DEPENDS  HACKING  MAINTAINERS  Makefile.am  NEWS  README  README.STABLE_BRANCH  README.md  README.specfile  TRANSLATABLE  acconfig.h  acinclude.m4  app-docs.am.template  app-docs.make  applet-docs.make  autogen.sh  config.h.in  config.h.meson  configure.ac  configure.in  desktop_gnome_icon_theme.schemas  git.mk  gnome-core.spec  gnome-core.spec.in  gnome-desktop.doap  gnome-desktop.spec.in  gnome-version.in  gnome-version.xml.in  gnome-version.xml.in.in  meson.build  meson_options.txt  (+3 more)
desktop-docs/: ChangeLog  ChangeLog.pre-git  Makefile  Makefile.am  README  gnome-intro-it.sgml  gnome-intro.html  gnome-intro.sgml
desktop-docs/fdl/: .cvsignore  LINGUAS  Makefile.am  fdl.omf.in  meson.build
desktop-docs/gnome-feedback/: .cvsignore  Makefile.am  gnome-feedback.omf.in
desktop-docs/gnome-intro/: Makefile.am  a-sample-session.html  a-sample-session75.html  book01.html  c01.html  c0101.html  c0102.html  c02.html  c0201.html  c0202.html  c0203.html  c0204.html  c0205.html  c0206.html  c0207.html  c0208.html  c93.html  c93127.html  c93175.html  c93191.html  c93230.html  c93302.html  c93372.html  c93412.html  docbook.css  f01.html  f0101.html  f0102.html  f13.html  f1346.html  gnome-intro.html
desktop-docs/gpl/: .cvsignore  LINGUAS  Makefile.am  gpl.omf.in  meson.build
desktop-docs/lgpl/: .cvsignore  LINGUAS  Makefile.am  lgpl.omf.in  meson.build
desktop-links/: .cvsignore  Accessories.directory  Accessories.directory.in  Administration.directory  Applications.directory  Applications.directory.in  Audio.directory  Balsa.desktop  Bluefish.desktop  ChangeLog  Development.directory  Development.directory.in  Emacs.desktop  Emacs.desktop.in  Eterm.desktop  Eterm.desktop.in  FileRunner.desktop  FileRunner.desktop.in  GIMP.desktop  GIMP.desktop.in  GXAnim.desktop  GXanim.desktop  GXanim.desktop.in  Games.directory  Games.directory.in  Gmc.desktop  Gmc.desktop.in  Graphics.directory  Graphics.directory.in  Home.directory  Home.directory.in  Imlib_config.desktop  Imlib_config.desktop.in  Internet.directory  Internet.directory.in  Kterm.desktop  Kterm.desktop.in  Makefile.am  Multimedia.directory  Multimedia.directory.in  (+65 more)
examples/: meson.build  qr-widget-example.c
gnome-about/: .cvsignore  ChangeLog  Makefile.am  README  authors.h  contributors.c  contributors.h  contributors.list  gnome-about.1  gnome-about.c  gnome-about.desktop.in.in  gnome-about.in  logo.xpm
gnome-about/headers/: Makefile.am
gnome-about/logos/: Makefile.am
libgnome-desktop/: .cvsignore  Bonobo_Moniker_ditem.server.in.in  ChangeLog  ChangeLog.pre-git  Makefile.am  base-symbol.map  bonobo-config-ditem-internals.c  bonobo-config-ditem-internals.h  bonobo-config-ditem-utils.c  bonobo-config-ditem-utils.h  bonobo-config-ditem.c  bonobo-config-ditem.h  bonobo-moniker-ditem.c  default-input-sources.h  desktop-item-boot.c  display-name.c  edid-parse.c  edid.h  egg-spawn.c  egg-spawn.h  generate-non-latin-input-sources.py  gnome-bg-crossfade.c  gnome-bg-crossfade.h  gnome-bg-slide-show.c  gnome-bg-slide-show.h  gnome-bg.c  gnome-bg.h  gnome-datetime-source.c  gnome-datetime-source.h  gnome-desktop-2.0-uninstalled.pc.in  gnome-desktop-2.0.pc.in  gnome-desktop-3.0-uninstalled.pc.in  gnome-desktop-3.0.pc.in  gnome-desktop-4.0-uninstalled.pc.in  gnome-desktop-4.0.pc.in  gnome-desktop-i18n.c  gnome-desktop-i18n.h  gnome-desktop-item.c  gnome-desktop-item.h  gnome-desktop-thumbnail-script.c  (+65 more)
libgnome-desktop/gnome-bg/: gnome-bg-slide-show.c  gnome-bg-slide-show.h  gnome-bg-symbols.map  gnome-bg.c  gnome-bg.h  meson.build
libgnome-desktop/gnome-qr/: gnome-qr-symbols.map  gnome-qr.c  gnome-qr.h  meson.build
libgnome-desktop/gnome-qr-gtk/: gnome-qr-widget.c  gnome-qr-widget.h  meson.build
libgnome-desktop/gnome-rr/: gnome-rr-config.c  gnome-rr-config.h  gnome-rr-output-info.c  gnome-rr-output-info.h  gnome-rr-private.h  gnome-rr-screen.c  gnome-rr-screen.h  gnome-rr-symbols.map  gnome-rr-types.h  gnome-rr.h  meson.build
libgnome-desktop/libgnome/: Makefile.am  gnome-desktop-item.h
libgnome-desktop/libgnomeui/: Makefile.am  gnome-bg.h  (+9 more)
man/: Makefile.am  deskguide_applet.1  deskguide_applet.sgml  gmenu.1  gmenu.sgml  gnome-about.1  gnome-about.sgml  gnome-edit.1  gnome-edit.sgml  gnome-hint-properties-capplet.1  gnome-hint-properties-capplet.sgml  gnome-hint.1  gnome-hint.sgml  gnome-libice-check.1  gnome-libice-check.sgml  gnome-login-check.1  gnome-login-check.sgml  gnome-panel-add-launcher.1  gnome-panel-add-launcher.sgml  gnome-panel-properties-capplet.1  gnome-panel-properties-capplet.sgml  gnome-smproxy.1  gnome-smproxy.sgml  panel.1  panel.sgml  session-properties-capplet.1  session-properties-capplet.sgml  session-properties.1  session-properties.sgml  tasklist_applet.1  tasklist_applet.sgml
pixmaps/: .cvsignore  Makefile.am  UNIX-small.xpm  UNIX-transparent.xpm  UNIX.xpm  arrowup.xpm  gnome-balsa-small.xpm  gnome-balsa-transparent.xpm  gnome-balsa.xpm  gnome-cromagnon-small.xpm  gnome-cromagnon-transparent.xpm  gnome-cromagnon.xpm  gnome-file-c-small.xpm  gnome-file-c-transparent.xpm  gnome-file-c.xpm  gnome-file-h-small.xpm  gnome-file-h-transparent.xpm  gnome-file-h.xpm  gnome-folder-small.xpm  gnome-gimp-small.xpm  gnome-gimp-transparent.xpm  gnome-gimp.xpm  gnome-globe-small.xpm  gnome-globe-transparent.xpm  gnome-globe.xpm  gnome-gmush-small.xpm  gnome-gmush-transparent.xpm  gnome-gmush.xpm  gnome-gnomefoot-small.xpm  gnome-gnomefoot-transparent.xpm  gnome-gnomefoot.xpm  gnome-gnomine-small.xpm  gnome-gnomine-transparent.xpm  gnome-gnomine.xpm  gnome-html-small.xpm  gnome-html-transparent.xpm  gnome-html.xpm  gnome-menu-down.xpm  gnome-menu-left.xpm  gnome-menu-right.xpm  (+27 more)
tests/: C.ref.ui  Makefile.am  bg-slide-show.c  en_US.utf-8.ref.ui  gtk-reftest.c  he_IL.utf8.ref.ui  ja_JP.utf8.ref.ui  languages.c  meson.build  qr-code.c  starttime.xml  wall-clock.c  wallclock-reftest.c
(+344 files in other folders)
